# nextDFTB

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
abi/: CMakeLists.txt
abi/include/nextdftb/: abi.h  errors.h  logging.h
bindings/: CMakeLists.txt
bindings/python/: README.md
bindings/python/abi/: module.cpp
bindings/python/api/nextdftb/: _log_handler.py
bindings/python/nextdftb/: __init__.py
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: compiler_flags.cmake
core_cpp/: CMakeLists.txt
core_cpp/include/nextdftb/: buffer.hpp  error.hpp  logger.hpp  orchestrator.hpp
core_cpp/src/: buffer.cpp  error.cpp  logger.cpp  orchestrator.cpp  version.cpp
engine/: CMakeLists.txt  README.md
engine/abi/: nextdftb_abi_errors.f90
engine/core/: nextdftb_kinds.f90
engine/src/: nextdftb_abi_logging.f90  nextdftb_runtime.f90  nextdftb_test.f90
hpc_mpi/: CMakeLists.txt  README.md
hpc_mpi/include/nextdftb/hpc/: halo_exchange.hpp  mpi_topology.hpp  reductions.hpp
hpc_mpi/src/: stubs.cpp
io/: CMakeLists.txt
io/include/nextdftb/: io_writer.hpp
io/src/: text_writer.cpp
kernels_fortran/: CMakeLists.txt
kernels_fortran/src/: nextdftb_abi.f90  nextdftb_constants.f90  nextdftb_main.f90
properties/: pyproject.toml
properties/charge_ml/: __init__.py  data.py  default.py  display.py  electrostatic.py  features.py  main.py  metric.py  model.py  predict.py  train.py
properties/exemples/: exemple_basic.py  exemple_predict.py  exemple_qeq.py  exemple_water.py
properties/tests/: test_electrostatic.py  test_predict.py
socket/: communicate.py
src/: CMakeLists.txt  cli.f90  constants.f90  globals.f90  hello.f90  kinds.f90  main.f90
src/base/: atoms.f90  constants.f90  default.f90  globals.f90  keywords.f90  molecule.f90  neighbor.f90  structure.f90  units.f90
src/dft/: dft.f90  write_dft.f90
src/dftb/: dftb.f90  dftbstate.f90  orbitals.f90  write_dftb.f90
src/dftb/compute/: charges.f90  coulomb.f90  dftb_energy.f90  dftb_grad.f90  diag.f90
src/dftb/core/: density.f90  gamma.f90  matel.f90  shift.f90  skrot.f90
src/dftb/disp/: disp.f90
src/dftb/pola/: pola.f90
src/dftb/qmmm/: qmmm.f90
src/dftb/repulsif/: repulsif.f90
src/dftb/resolved/: linalg.f90  mixer.f90  scc.f90
src/dftb/skf/: interp.f90  readskf.f90
src/dftb/solver/: linalg.f90  mixer.f90  scc.f90
src/dftb/solver/mixer/: broyden_mixer.f90  mixer.f90  mixer_factory.f90  random_mixer.f90  simple_mixer.f90
src/driver/: abstract_basis.f90  abstract_calc.f90  driver.f90  single_point.f90
src/driver/md/: md.f90
src/driver/opt/: opt.f90
src/errors/: errors.f90
src/io/logger/: logger.f90  timer.f90
src/io/output/: dftb_results.f90  write_matrix.f90  write_output.f90
src/io/parser/: parse_input.f90  parse_param.f90
src/parser/: keywords.f90  parse_geometry.f90  parse_input.f90  property.f90
src/skf/: electronic.f90  interp.f90  polint.f90  readskf.f90  repulsive.f90  skf.f90  skf_gen.f90  slakos.f90  write_skf.f90
src/utils/: constants.f90  kind.f90  units.f90
src/utils/logger/: logger.f90  timer.f90
src/utils/output/: output_base.f90  write_matrix.f90  write_output.f90
test/: CMakeLists.txt  test_atoms.f90  test_parse_geometry.f90  test_structure.f90  test_units.f90  test_utils.f90
test/inp/: results.out
tests/: CMakeLists.txt
tests/runners/: pyproject.toml  test_cli_smoke.py  test_python_import.py
tests/unit/python/: conftest.py  test_lifecycle.py  test_log.py  test_log_handler.py  test_public_api.py  test_smoke.py  test_version.py
